--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-header></app-header>
-<!-- <app-add-org-form></app-add-org-form> -->
+<app-add-org-form></app-add-org-form>
 <app-card-view></app-card-view>
