--- a/src/app/add-org-form/add-org-form.component.html
+++ b/src/app/add-org-form/add-org-form.component.html
@@ -1,15 +1,39 @@
-<div class="example-container">
-  <mat-form-field>
-    <input matInput placeholder="Input">
-  </mat-form-field>
-
-  <mat-form-field>
-    <textarea matInput placeholder="Textarea"></textarea>
-  </mat-form-field>
-
-  <mat-form-field>
-    <mat-select placeholder="Select">
-      <mat-option value="option">Option</mat-option>
-    </mat-select>
-  </mat-form-field>
-</div>
+<mat-card class="card">
+  <form (submit)="onAddPost(postForm)" #postForm="ngForm" class="items">
+    <mat-form-field class="items">
+      <input
+        matInput
+        type="text"
+        name="name"
+        ngModel
+        required
+        placeholder="Organization Name"
+        #name="ngModel">
+      <mat-error *ngIf="name.invalid">Please enter the name of the Organization</mat-error>
+    </mat-form-field>
+    <br>
+    <mat-form-field class="items">
+      <textarea
+        matInput
+        rows="4"
+        name="description"
+        ngModel
+        placeholder="Description"
+        #description="ngModel"></textarea>
+      <mat-error *ngIf="description.invalid">Please enter a Description.</mat-error>
+    </mat-form-field>
+    <br>
+    <mat-form-field class="items">
+      <input
+        matInput
+        name="picture"
+        ngModel
+        placeholder="Picture URL"
+        #picture="ngModel">
+    </mat-form-field>
+    <br>
+    <button
+      mat-raised-button class="button"
+      type="submit">Add</button>
+  </form>
+</mat-card>
