--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -4,11 +4,11 @@
   text-align: center;
 }
 .header-color {
-  background-color: purple;
+  background-color: rgb(139, 31, 130);
   color: aliceblue;
 }
 .addOrgButton {
-  background-color: rgb(184, 50, 184);
+  background-color: rgb(35, 207, 72);
   color: aliceblue;
   margin-left: 400px;
 }
@@ -29,7 +29,7 @@ ul{
 }
 a{
   text-decoration: none;
-  color: silver;
+  color: whitesmoke;
   font-size: medium;
 }
 .menu-items{
