--- a/src/app/posts/post-create/post-create.component.css
+++ b/src/app/posts/post-create/post-create.component.css
@@ -2,6 +2,25 @@ mat-form-field,
 textarea {
   width: 100%;
 }
+.container{
+  margin-left: 200px;
+  background-color:thistle;
+  margin-top: 20px;
+  padding-top:15px;
+  padding-bottom: 15px;
+ 
+}
+
+.member{
+  margin-left: 200px;
+  margin-right: 180px;
+  background-color:rgb(146, 81, 146);
+  margin-top: 20px;
+  padding-top:15px;
+  padding-bottom: 15px;
+
+  
+}
 
 .addOrgButton{
   background-color: rgb(35, 207, 72);
@@ -21,6 +40,6 @@ textarea {
   background:rgb(139, 31, 130);
   text-align: center;
   color: rgb(255, 254, 254);
-  font-size: 30px;
+  font-size: 20px;
  
 }
