--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,79 +1,56 @@
+<div class="container">
 <mat-card>
   <form (submit)="onAddPost(postForm)" #postForm="ngForm">
     <mat-form-field>
-      <input
-        matInput
-        type="text"
-        name="name"
-        [ngModel]="post?.name"
-        required
-        placeholder="Name"
-        minlength="3"
+      <input matInput type="text" name="name" [ngModel]="post?.name" required placeholder="Name" minlength="3"
         #name="ngModel">
       <mat-error *ngIf="name.invalid">Please enter the Organization Name.</mat-error>
     </mat-form-field>
     <mat-form-field>
-      <textarea
-        matInput
-        rows="4"
-        name="description"
-        [ngModel]="post?.description"
-        placeholder="Description"
-        required
+      <textarea matInput rows="4" name="description" [ngModel]="post?.description" placeholder="Description" required
         #description="ngModel"></textarea>
       <mat-error *ngIf="description.invalid">Please enter a description of the Organization.</mat-error>
     </mat-form-field>
     <mat-form-field>
-      <input
-        matInput
-        type="text"
-        name="picture"
-        [ngModel]="post?.picture"
-        placeholder="Picture URL"
-        minlength="3"
+      <input matInput type="text" name="picture" [ngModel]="post?.picture" placeholder="Picture URL" minlength="3"
         #picture="ngModel">
       <mat-error *ngIf="picture.invalid">Please type a Picture URL .</mat-error>
     </mat-form-field>
-    <button
-      mat-raised-button
-      class="addOrgButton"
-    
-      type="submit">Save Organzation</button>
-      <button
-      mat-raised-button
-      color="warn"
-      [routerLink]="['/orglist']"
-      class="warnButton"
-      type="submit">Cancel</button>
+    <button mat-raised-button class="addOrgButton" type="submit">Save Organzation</button>
+    <button mat-raised-button color="warn" [routerLink]="['/orglist']" class="warnButton" type="submit">Cancel</button>
   </form>
-<!-- <button mat-raised-button class="button" [routerLink]="['/orglist']" routerLinkActive="router-link-active" >Done</button> -->
+  <!-- <button mat-raised-button class="button" [routerLink]="['/orglist']" routerLinkActive="router-link-active" >Done</button> -->
 </mat-card>
-<br>
-<br>
-<div *ngIf="router.url!='/orgcreate'">
-
-<p style="text-align: center; font-size: 20px;"> Current Members </p>
-<mat-accordion multi="true" >
-  <mat-expansion-panel >
-    <mat-expansion-panel-header>
-        {{post?.name}}
-    </mat-expansion-panel-header>
-    <mat-action-row>
-      <button mat-button color="warn">DELETE</button>
-    </mat-action-row>
-  </mat-expansion-panel>
-</mat-accordion>
-<br>
-<p style="text-align: center; font-size: 20px;">Requests</p>
-<mat-accordion multi="true" >
-  <mat-expansion-panel>
-    <mat-expansion-panel-header>
-      {{ post?.name }}
-</mat-expansion-panel-header>
-<mat-action-row>
-  <button mat-button color="primary">ADD</button>
-</mat-action-row>
-</mat-expansion-panel>
-
-</mat-accordion>
 </div>
+
+
+
+
+<div *ngIf="router.url!='/orgcreate'" class="member">
+
+  
+    <p style="text-align: center; font-size: 20px; color: whitesmoke; height: 35px; ;"> Current Members </p>
+    <mat-accordion multi="true">
+      <mat-expansion-panel>
+        <mat-expansion-panel-header style=" background-color:thistle; color: black; font-weight: bold ;">
+          {{post?.name}}
+        </mat-expansion-panel-header>
+        <mat-action-row>
+          <button mat-button style="color: whitesmoke; background-color: rgb(233, 61, 31);">DELETE</button>
+        </mat-action-row>
+      </mat-expansion-panel>
+    </mat-accordion>
+  
+    <p style="text-align: center; font-size: 20px; color: white; height: 35px; padding-top:15px; padding-bottom:30px ;  ">Requesting Members</p>
+    <mat-accordion multi="true">
+      <mat-expansion-panel>
+        <mat-expansion-panel-header style=" background-color: rgb(196, 191, 191); color:black; font-weight: bold ;">
+          {{ post?.name }}
+        </mat-expansion-panel-header>
+        <mat-action-row>
+          <button mat-button style=" background-color: rgb(35, 207, 72);  color: whitesmoke;">ADD</button>
+        </mat-action-row>
+      </mat-expansion-panel>
+
+    </mat-accordion>
+  </div>
