--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,20 +1,32 @@
-
-<mat-toolbar class="header-color"  >
+<mat-toolbar class="header-color">
 
   <span class="title-center"> University of Wisconsin Whitewater - CORMS </span>
   <span class="spacer"></span>
 
   <ul>
-    <li>
-      <a mat-button [routerLink]="['/orgcreate']" routerLinkActive="mat-accent" *ngIf="router.url==='/orglist'">Add Organization</a>
-      <a mat-button [routerLink]="['/orglist']" routerLinkActive="router-link-active" *ngIf="router.url!=='/orglist'"> Done </a>
-    </li>
-  </ul>
-<!--
+    <li *ngIf="userIsAuthenticated" >
+      <a mat-button [routerLink]="['/orgcreate']" routerLinkActive="mat-accent"
+        *ngIf="router.url==='/orglist'">Add Organization</a>
+     </li>
+    </ul>
+    <!-- <li *ngIf="userIsAuthenticated" >
+      <a mat-button [routerLink]="['/orglist']" routerLinkActive="router-link-active"
+        *ngIf="router.url!=='/orglist'"> Done </a> 
+    </li> -->
+   
+      <a *ngIf="!userIsAuthenticated" mat-button [routerLink]="['/login']" routerLinkActive="router-link-active"> Login </a>
+    
+    
+        <a *ngIf="!userIsAuthenticated" mat-button [routerLink]="['/signup']" routerLinkActive="router-link-active"> Signup </a>
+    
+    
+      <button *ngIf="userIsAuthenticated" mat-raised-button color="primary" (click)="logout()">Logout</button>
+    
+
+  <!--
   <button mat-raised-button class="addOrgButton" *ngIf="router.url === '/orglist'"   [routerLink]="['/orgcreate']" routerLinkActive="router-link-active" > Add Organization </button>
   <button mat-raised-button class="doneButton" *ngIf="router.url === '/orgcreate'"   [routerLink]="['/orglist']" routerLinkActive="router-link-active" > Done </button> -->
 
 
 
 </mat-toolbar>
-
