--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,4 +1,5 @@
-<div class="container">
+<div class="container" >
+    <!-- [ngStyle]="{'margin-top':router.url === '/orgcreate' ? '150px' : '' }" -->
 <mat-card>
   <form (submit)="onAddPost(postForm)" #postForm="ngForm">
     <mat-form-field>
@@ -24,15 +25,11 @@
 </div>
 
 
-
-
 <div *ngIf="router.url!='/orgcreate'" class="member">
-
-  
     <p style="text-align: center; font-size: 20px; color: whitesmoke; height: 35px; ;"> Current Members </p>
-    <mat-accordion multi="true">
-      <mat-expansion-panel>
-        <mat-expansion-panel-header style=" background-color:thistle; color: black; font-weight: bold ;">
+    <mat-accordion multi="true" >
+      <mat-expansion-panel style=" background-color:thistle;">
+        <mat-expansion-panel-header style="color: black; font-weight: bold ;">
           {{post?.name}}
         </mat-expansion-panel-header>
         <mat-action-row>
@@ -43,8 +40,8 @@
   
     <p style="text-align: center; font-size: 20px; color: white; height: 35px; padding-top:15px; padding-bottom:30px ;  ">Requesting Members</p>
     <mat-accordion multi="true">
-      <mat-expansion-panel>
-        <mat-expansion-panel-header style=" background-color: rgb(196, 191, 191); color:black; font-weight: bold ;">
+      <mat-expansion-panel style=" background-color:rgb(231, 229, 229);">
+        <mat-expansion-panel-header style=" color:black; font-weight: bold ;">
           {{ post?.name }}
         </mat-expansion-panel-header>
         <mat-action-row>
