--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -6,9 +6,10 @@
       <mat-card-content class="card-content">{{post.description}} <br></mat-card-content>
 
       <img class="image" mat-card-image src="{{post.picture}}">
-      <button mat-raised-button  class="button">JOIN</button>
-      <button mat-button class="icon" [routerLink]="['/orgedit',post.id]" routerLinkActive="router-link-active" ><mat-icon>edit</mat-icon> </button>
-      <button mat-button class="icon" (click)="onDelete(post.id)"><mat-icon> delete </mat-icon></button>
+      <button *ngIf="userIsAuthenticated" mat-raised-button  class="button">JOIN</button>
+      
+      <button *ngIf="userIsAuthenticated"  mat-button class="icon" [routerLink]="['/orgedit',post.id]" routerLinkActive="router-link-active" ><mat-icon>edit</mat-icon> </button>
+      <button *ngIf="userIsAuthenticated"  mat-button class="icon" (click)="onDelete(post.id)"><mat-icon> delete </mat-icon></button>
     </mat-card>
   </div>
 
