--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -29,8 +29,8 @@
     <p style="text-align: center; font-size: 20px; color: whitesmoke; height: 35px; ;"> Current Members </p>
     <mat-accordion multi="true" >
       <mat-expansion-panel style=" background-color:thistle;">
-        <mat-expansion-panel-header style="color: black; font-weight: bold ;">
-          {{post?.name}}
+        <mat-expansion-panel-header style="color: black; font-weight: bold ;" >
+        
         </mat-expansion-panel-header>
         <mat-action-row>
           <button mat-button style="color: whitesmoke; background-color: rgb(233, 61, 31);">DELETE</button>
@@ -39,10 +39,10 @@
     </mat-accordion>
   
     <p style="text-align: center; font-size: 20px; color: white; height: 35px; padding-top:15px; padding-bottom:30px ;  ">Requesting Members</p>
-    <mat-accordion multi="true">
+    <mat-accordion multi="true" *ngFor="let roster of rosters ">
       <mat-expansion-panel style=" background-color:rgb(231, 229, 229);">
-        <mat-expansion-panel-header style=" color:black; font-weight: bold ;">
-          {{ post?.name }}
+        <mat-expansion-panel-header style=" color:black; font-weight: bold ;" *ngIf="post.name===roster.organization">
+            {{roster?.username}}
         </mat-expansion-panel-header>
         <mat-action-row>
           <button mat-button style=" background-color: rgb(35, 207, 72);  color: whitesmoke;">ADD</button>
