show user profile in header

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,33 +1,39 @@
 <mat-toolbar class="header-color">
-  <ul>
-    <li *ngIf="userIsAuthenticated">
-      <a style="font-size: 15px;"> Welcome {{username}}</a>
-    </li>
-  </ul>
+
+
+  <img class="image" *ngIf="userIsAuthenticated" style=" height:60px; width: 60px; "
+    src="https://img.pngio.com/profile-icon-png-image-free-download-searchpngcom-profile-icon-png-673_673.png">
+    <ul>
+      <li *ngIf="userIsAuthenticated">
+        <a style="font-size: 15px;"> {{user}}</a>
+      </li>
+    </ul>
+
   <span class="spacer"></span>
   <span class="title-center"> University of Wisconsin Whitewater - CORMS </span>
   <span class="spacer"></span>
 
   <ul>
-    <li *ngIf="userIsAuthenticated && userId==='5dcdfbc72b62ec465537226f'" >
-      <a mat-button [routerLink]="['/orgcreate']" routerLinkActive="mat-accent"
-        *ngIf="router.url==='/orglist'">Add Organization</a>
-     </li>
+    <li *ngIf="userIsAuthenticated && userId==='5dcdfbc72b62ec465537226f'">
+      <a mat-button [routerLink]="['/orgcreate']" routerLinkActive="mat-accent" *ngIf="router.url==='/orglist'">Add
+        Organization</a>
+    </li>
 
 
-    <li *ngIf="userIsAuthenticated" >
-      <a mat-button [routerLink]="['/orglist']" routerLinkActive="router-link-active"
-        *ngIf="router.url!=='/orglist'"> Done </a>
+    <li *ngIf="userIsAuthenticated">
+      <a mat-button [routerLink]="['/orglist']" routerLinkActive="router-link-active" *ngIf="router.url!=='/orglist'">
+        Done </a>
     </li>
   </ul>
 
-      <a *ngIf="!userIsAuthenticated" mat-button [routerLink]="['/login']" routerLinkActive="router-link-active"> Login </a>
+  <a *ngIf="!userIsAuthenticated" mat-button [routerLink]="['/login']" routerLinkActive="router-link-active"> Login </a>
 
 
-        <a *ngIf="!userIsAuthenticated" mat-button [routerLink]="['/signup']" routerLinkActive="router-link-active"> Signup </a>
+  <a *ngIf="!userIsAuthenticated" mat-button [routerLink]="['/signup']" routerLinkActive="router-link-active"> Signup
+  </a>
 
 
-      <button *ngIf="userIsAuthenticated" mat-raised-button color="primary" (click)="logout()">Logout</button>
+  <button *ngIf="userIsAuthenticated" mat-raised-button color="primary" (click)="logout()">Logout</button>
 
 
   <!--
