--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,8 +1,9 @@
 <div class="container">
     <mat-card>
         <form (submit)="onLogin(loginForm)" #loginForm="ngForm">
-
-            <mat-form-field style="margin-top:50px;">
+                <img class="image" mat-card-image src="../../assets/image/image_warhawks.png">
+                <br>
+            <mat-form-field style="margin-top:0px;">
                 <input matInput type="email" ngModel name="email" placeholder="Email" #emailInput="ngModel" required
                     email>
                 <mat-error *ngIf="emailInput.invalid">Please enter a valid Email.</mat-error>
@@ -15,7 +16,7 @@
             </mat-form-field>
          
     
-            <button mat-raised-button color="primary" style="margin-top:100px;" type="submit" >Login</button>
+            <button mat-raised-button color="primary" style="margin-top:50px;" type="submit" >Login</button>
            </form>
     </mat-card>
 </div>
