--- a/src/app/user-profile/user-profile.component.css
+++ b/src/app/user-profile/user-profile.component.css
@@ -3,11 +3,12 @@ textarea {
   width: 100%;
 }
 .container{
-  margin-left: 200px;
+  margin-left: 270px;
   background-color:thistle;
   margin-top: 20px;
   padding-top:15px;
   padding-bottom: 15px;
+  width: 1000px;
  
 }
 
@@ -42,6 +43,9 @@ textarea {
   color: rgb(255, 254, 254);
   font-size: 20px;
  
+}
+input[type="file"]{
+  visibility: hidden;
 }
 .image{
  
