--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -27,7 +27,7 @@
 
 
 <div *ngIf="router.url!='/orgcreate'" class="member">
-  <p style="text-align: center; font-size: 20px; color: whitesmoke; height: 35px; ;"> Current Members </p>
+  <p style="text-align: center; font-size: 20px; color: whitesmoke; height: 35px;"> Current Members </p>
   <mat-accordion multi="true">
     <mat-expansion-panel style=" background-color:thistle;">
       <mat-expansion-panel-header style="color: black; font-weight: bold ;">
