--- a/src/app/posts/post-list/post-list.component.css
+++ b/src/app/posts/post-list/post-list.component.css
@@ -11,16 +11,22 @@
   height:180px;
   margin-left: 0.1px;
 }
+.pop-up{
+  background-color:red; color: white; font-size: 15px; width: 20px; height: 20px; text-align: center;
+  margin-top: 0%;
+  border-radius: 50%;
+  margin-left: 180px;
+}
 .card{
   width: 230px;
-  height: 330px;
+  height: 360px;
   margin-top: 12px;
 }
 .addOrgButton{
 background-color: rgb(184, 50, 184);
 color: aliceblue;
 margin-left:1375px;
-margin-top: 5px ;
+margin-top: 0px ;
 }
 .icon{
   width:0px;
