--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -1,8 +1,11 @@
 
 <div class="container" fxLayout="row wrap" fxLayoutGap="13px">
-  <div *ngFor="let post of posts ">
+  <div *ngFor="let post of posts " >
     <mat-card class="card">
-      <mat-card-title class="card-title">{{post.name}} Club</mat-card-title>
+        <p *ngIf="userIsAuthenticated && userId===post.creator" class="pop-up">{{rosterLength}}</p>
+      <mat-card-title class="card-title">
+        {{post.name}} Club
+      </mat-card-title>
       <mat-card-content class="card-content">{{post.description}} <br></mat-card-content>
 
       <img class="image" mat-card-image src="{{post.picture}}">
