--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -1,15 +1,15 @@
 
 <div class="container" fxLayout="row wrap" fxLayoutGap="13px">
   <div *ngFor="let post of posts " >
-    <mat-card class="card">
-        <p *ngIf="userIsAuthenticated && userId===post.creator" class="pop-up">{{rosterLength}}</p>
+    <mat-card class="card" (mouseover)="popUp(post.name, $event)">
+        <p *ngIf="userIsAuthenticated && userId===post.creator" class="pop-up" >{{rosterLength}}</p>
       <mat-card-title class="card-title">
         {{post.name}} Club
       </mat-card-title>
-      <mat-card-content class="card-content">{{post.description}} <br></mat-card-content>
+      <mat-card-content class="card-content">{{post.description}}<br></mat-card-content>
 
       <img class="image" mat-card-image src="{{post.picture}}">
-      <button *ngIf="userIsAuthenticated " mat-raised-button (click)="onJoin(post.name, JoinButton)" class="button" #JoinButton>JOIN</button>
+      <button *ngIf="userIsAuthenticated && userId!='5dcdfbc72b62ec465537226f' " mat-raised-button (click)="onJoin(post.name, JoinButton)" class="button" #JoinButton>JOIN</button>
       
       <button *ngIf="userIsAuthenticated && userId===post.creator"  mat-button class="icon" [routerLink]="['/orgedit',post.id]" routerLinkActive="router-link-active" ><mat-icon>edit</mat-icon> </button>
 
